force-app/main/default/objects/Region__c/fields/AM_Collections__c.field-meta.xml
<CustomField>
    <fullName>AM_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Collections</label>
    <type>Checkbox</type>
</CustomField>