force-app/main/default/objects/Region__c/fields/Clearance_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clearance Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Postcodes (Clearance Supplier)</relationshipLabel>
    <relationshipName>Postcodes1</relationshipName>
    <type>Lookup</type>
</CustomField>