force-app/main/default/objects/Region__c/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <length>60</length>
    <type>Text</type>
</CustomField>