force-app/main/default/objects/Region__c/fields/Council_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Council_restrictions__c</fullName>
    <label>Council Restrictions</label>
    <type>Url</type>
</CustomField>