force-app/main/default/objects/Region__c/fields/DeliveryDaysIndex__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDaysIndex__c</fullName>
    <formula>IF(INCLUDES(DeliveryDays__c, &quot;Sunday&quot;), &quot;1,&quot;, &quot;&quot;) +
IF(INCLUDES(DeliveryDays__c, &quot;Monday&quot;), &quot;2,&quot;, &quot;&quot;) +
IF(INCLUDES(DeliveryDays__c, &quot;Tuesday&quot;), &quot;3,&quot;, &quot;&quot;) +
IF(INCLUDES(DeliveryDays__c, &quot;Wednesday&quot;), &quot;4,&quot;, &quot;&quot;) +
IF(INCLUDES(DeliveryDays__c, &quot;Thursday&quot;), &quot;5,&quot;, &quot;&quot;) +
IF(INCLUDES(DeliveryDays__c, &quot;Friday&quot;), &quot;6,&quot;, &quot;&quot;) + 
IF(INCLUDES(DeliveryDays__c, &quot;Saturday&quot;), &quot;7&quot;, &quot;&quot;)</formula>
    <label>Delivery Days Index</label>
    <type>Text</type>
</CustomField>