force-app/main/default/objects/Region__c/fields/FM_Caddy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FM_Caddy_Schedule__c</fullName>
    <label>FM Caddy Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM Only</fullName>
                <default>true</default>
                <label>PM Only</label>
            </value>
            <value>
                <fullName>AM Only</fullName>
            </value>
            <value>
                <fullName>AM &amp; PM</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>