force-app/main/default/objects/Region__c/fields/FM_Glass_Bin_Mon_Fri__c.field-meta.xml
<CustomField>
    <fullName>FM_Glass_Bin_Mon_Fri__c</fullName>
    <label>FM Glass Bin (Mon-Fri)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Only</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>