force-app/main/default/objects/Region__c/fields/Is_National__c.field-meta.xml
<CustomField>
    <fullName>Is_National__c</fullName>
    <formula>IF(
ISPICKVAL(Zone__c, &quot;National 1&quot;), TRUE,
IF(
ISPICKVAL(Zone__c, &quot;National 2&quot;), TRUE,
IF(
ISPICKVAL(Zone__c, &quot;National 3&quot;), TRUE,
FALSE)))</formula>
    <label>Is National?</label>
    <type>Checkbox</type>
</CustomField>