force-app/main/default/objects/Region__c/fields/London_Zone__c.field-meta.xml
<CustomField>
    <fullName>London_Zone__c</fullName>
    <description>Used for optimisation</description>
    <inlineHelpText>Zone 1 most central, zone 3 outer london</inlineHelpText>
    <label>London Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone 1</fullName>
            </value>
            <value>
                <fullName>Zone 2</fullName>
            </value>
            <value>
                <fullName>Zone 3</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>