force-app/main/default/objects/Region__c/fields/PM_Collections__c.field-meta.xml
<CustomField>
    <fullName>PM_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Collections</label>
    <type>Checkbox</type>
</CustomField>