force-app/main/default/objects/Region__c/fields/Postcodes__c.field-meta.xml
<CustomField>
    <fullName>Postcodes__c</fullName>
    <label>Postcodes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>