force-app/main/default/objects/Region__c/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <formula>CASE( Zone__c ,
&quot;London&quot;, $Label.Price_Book_Tier_2_ID ,
&quot;Inner London&quot;, $Label.Price_Book_Tier_1_ID ,
&quot;Westminster&quot;, $Label.Price_Book_Tier_0_ID ,
&quot;Outer London&quot;,$Label.Price_Book_Tier_4_ID ,
&quot;Birmingham&quot;, $Label.Price_Book_Tier_4_ID ,
&quot;National 1&quot;,$Label.Price_Book_Tier_4_ID ,
&quot;National 2&quot;,$Label.Price_Book_Tier_4_ID ,
&quot;National 3&quot;,$Label.Price_Book_Tier_4_ID ,
$Label.Price_Book_Tier_0_ID)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book ID</label>
    <type>Text</type>
</CustomField>