force-app/main/default/objects/Region__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <formula>CASE( Zone__c ,
&quot;London&quot;, &quot;Tier 2 2022&quot;,
&quot;Outer London&quot;, &quot;Tier 4 2023&quot;,
&quot;Inner London&quot;, &quot;Tier 1 2023&quot;,
&quot;Westminster&quot;, &quot;Tier 0 2023&quot;,
&quot;Birmingham&quot;, &quot;Tier 4 2023&quot;,
&quot;National 1&quot;,&quot;Tier 4 2023&quot;,
&quot;National 2&quot;,&quot;Tier 4 2023&quot;,
&quot;National 3&quot;,&quot;Tier 4 2023&quot;,
&quot;Tier 0 2023&quot;)</formula>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>