force-app/main/default/objects/Region__c/fields/Return_Boxes__c.field-meta.xml
<CustomField>
    <fullName>Return_Boxes__c</fullName>
    <label>Return Boxes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Mile</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>