force-app/main/default/objects/Region__c/fields/Sack_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Sack_Schedule__c</fullName>
    <label>Sack Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>