force-app/main/default/objects/Region__c/fields/Same_Day_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ops can collect on the same day if Missed Collection logged before 10am</description>
    <label>Same Day Recovery?</label>
    <type>Checkbox</type>
</CustomField>