force-app/main/default/objects/Region__c/fields/Wheelie_Bin_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Wheelie_Bin_Schedule__c</fullName>
    <label>Wheelie Bin Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>